[package]
name = "path-finder"
version = "0.1.0"
edition = "2021"

[lib]
name = "path_finder"
path = "src/lib.rs"

[[bin]]
name = "path-finder"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
tree-sitter = "0.25"
tree-sitter-java = "0.23"
walkdir = "2.4"

[dev-dependencies]
pretty_assertions = "1.4"
